<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WheelOLunch</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login</string>
    <string name="attempts">Attempts Left:</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
	<string name="app_id">589231857825913</string>
	<string name="fbapp_id">589231857825913</string>
	<string name="spinBtn">Spin Wheel</string>
	<string name="addPlaceBtn">Add Place</string>
	<string name="nameHint">Name</string>
	<string name="ratingHint">Rating</string>
	<string name="typeHint">Type</string>
	<string name="latHint">Latitude</string>
	<string name="longHint">Longtitude</string>
	<string name="title_activity_newplace">NewPlaceActivity</string>
	<string name="todays_weather">Today\'s Weather: </string>
	<string name="not_set">Not Set</string>
	<string name="sign_up">Sign Up</string>
	<string name="choice">Choice</string>
	<string name="action_pref">Settings</string>
	
	
	<string-array name="distance">
     <item>.25</item>
     <item>.5</item>
     <item>.75</item>
	 <item>1</item>
     <item>2</item>
     <item>3</item>
     <item>4</item>
     <item>5</item>
     <item>6</item>
     <item>7</item>
     <item>8</item>
     <item>9</item>
     <item>10</item>
     <item>11</item>
     <item>12</item>
     <item>13</item>
     <item>14</item>
     <item>15</item>
     <item>16</item>
     <item>17</item>
     <item>18</item>
     <item>19</item>
     <item>20</item>
     <item>21</item>
     <item>22</item>
     <item>23</item>
     <item>24</item>
     <item>25</item>
    </string-array>
    <string-array name="distance_values">
     <item>.25</item>
     <item>.5</item>
     <item>.75</item>
     <item>1</item>
     <item>2</item>
     <item>3</item>
     <item>4</item>
     <item>5</item>
     <item>6</item>
     <item>7</item>
     <item>8</item>
     <item>9</item>
     <item>10</item>
     <item>11</item>
     <item>12</item>
     <item>13</item>
     <item>14</item>
     <item>15</item>
     <item>16</item>
     <item>17</item>
     <item>18</item>
     <item>19</item>
     <item>20</item>
     <item>21</item>
     <item>22</item>
     <item>23</item>
     <item>24</item>
     <item>25</item>
    </string-array>
</resources>
