<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".MainActivity" >

   <TextView
       android:id="@+id/usernameTxt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_marginTop="50dp"
       android:text="@string/username"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
       android:id="@+id/usernameSign"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/usernameTxt"
       android:layout_toRightOf="@+id/usernameTxt"
       android:ems="10"
       android:inputType="text" >

      <requestFocus />
   </EditText>

   <TextView
      android:id="@+id/passwordTxt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/usernameTxt"
      android:layout_below="@+id/usernameTxt"
      android:layout_marginTop="38dp"
      android:text="@string/password"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
       android:id="@+id/passwordSign"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/signUpBtn"
       android:layout_alignRight="@+id/usernameSign"
       android:layout_toRightOf="@+id/usernameTxt"
       android:ems="10"
       android:inputType="textPassword" />

   <Button
       android:id="@+id/signUpBtn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/passwordTxt"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="41dp"
       android:onClick="login"
       android:text="@string/sign_up" />
   
</RelativeLayout>